# long-xls

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  build_exe.py  pyproject.toml
samples/: 20240808_KOSPI200_Tick_Kiwoom.schema.json  test_100k_rows.csv  test_200k_rows.schema.json  test_200k_rows.xlsx  test_70k_cp949.csv  test_70k_cp949.xls
src/long_xls/: __init__.py  __main__.py  cli.py  export.py  parser.py
tests/: generate_test_xls.py  test_parser.py
