[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "long-xls"
version = "0.1.0"
description = "Recover data from XLS files that exceed the 65,536-row limit"
readme = "README.en.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "seonhwa17kim" }]
keywords = ["xls", "excel", "biff", "recovery", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Utilities",
]
dependencies = [
    "openpyxl>=3.0",
]

[project.optional-dependencies]
csv = []                          # csv is stdlib, no extra deps
parquet = ["pyarrow>=10.0"]
all = ["pyarrow>=10.0"]
dev = [
    "pyarrow>=10.0",
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
long-xls = "long_xls.cli:main"

[project.urls]
Homepage = "https://github.com/seonhwa17kim/long-xls"
Issues = "https://github.com/seonhwa17kim/long-xls/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
